@@ -4,11 +4,11 @@ plugins {
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.3.5.RELEASE'
-  id 'uk.gov.hmcts.java' version '0.12.9'
-  id 'com.github.ben-manes.versions' version '0.38.0'
+  id 'uk.gov.hmcts.java' version '0.12.12'
+  id 'com.github.ben-manes.versions' version '0.39.0'
   id 'net.ltgt.apt' version '0.21'
-  id 'org.sonarqube' version '3.2.0'
-  id 'org.owasp.dependencycheck' version '6.1.6'
+  id 'org.sonarqube' version '3.3'
+  id 'org.owasp.dependencycheck' version '6.2.2'
   id "com.gorylenko.gradle-git-properties" version "2.3.1"
 }
 
@@ -74,6 +74,12 @@ task functionalPostDeploy(type: Test) {
   setClasspath(sourceSets.e2e.runtimeClasspath)
   include "uk/gov/hmcts/reform/sscs/functional/postdeploy/**"
   exclude "uk/gov/hmcts/reform/sscs/functional/predeploy/**"
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 pmd {
@@ -179,7 +185,7 @@ def versions = [
 ext["rest-assured.version"] = '4.3.0'
 
 ext {
-  springCloudVersion = 'Hoxton.SR11'
+  springCloudVersion = 'Hoxton.SR12'
 }
 
 dependencyManagement {
@@ -197,22 +203,52 @@ dependencyManagement {
       entry 'guava'
     }
     // until 9.0.29 - CVE-2019-12418, CVE-2019-17563
-    dependencySet(group: 'org.apache.tomcat.embed', version: '10.0.5') {
+    dependencySet(group: 'org.apache.tomcat.embed', version: '10.0.8') {
       entry 'tomcat-embed-core'
       entry 'tomcat-embed-websocket'
     }
     //CVE-2021-22112
-    dependencySet(group: 'org.springframework.security', version: '5.4.6') {
+    dependencySet(group: 'org.springframework.security', version: '5.5.1') {
       entry 'spring-security-crypto'
     }
 
+    //CVE-2021-22118
+    dependencySet(group: 'org.springframework', version: '5.2.15.RELEASE') {
+      entry 'spring-aop'
+      entry 'spring-aspects'
+      entry 'spring-beans'
+      entry 'spring-context'
+      entry 'spring-context-support'
+      entry 'spring-core'
+      entry 'spring-expression'
+      entry 'spring-jcl'
+      entry 'spring-jdbc'
+      entry 'spring-jms'
+      entry 'spring-messaging'
+      entry 'spring-orm'
+      entry 'spring-test'
+      entry 'spring-tx'
+      entry 'spring-web'
+      entry 'spring-webmvc'
+    }
+
+    //CVE-2021-27568
+    dependencySet(group: 'net.minidev', version: '2.4.7') {
+      entry 'json-smart'
+      entry 'accessors-smart'
+    }
+
     //CVE-2021-27807
-    dependencySet(group: 'org.apache.pdfbox', version: '2.0.23') {
+    dependencySet(group: 'org.apache.pdfbox', version: '2.0.24') {
       entry 'pdfbox'
     }
 
      dependencySet(group: 'org.apache.xmlgraphics', version: '1.14') {
       entry 'batik-all'
+    }
+
+    dependencySet(group: 'org.apache.commons', version: '1.21') {
+      entry 'commons-compress'
     }
   }
 }
@@ -256,16 +292,15 @@ dependencies {
 
   compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.1'
   compile group: 'com.github.hmcts', name: 'java-logging', version: versions.reformLogging
-
-  compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.3.12.RC1-SSCS-9066'
+  compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.4.56'
 
   compile group: 'com.jcraft', name: 'jsch', version: '0.1.55'
-  compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.68'
+  compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'
 
   compile group: 'org.json', name: 'json', version: '20210307'
 
-  compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
-  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.12.1'
+  compile group: 'commons-io', name: 'commons-io', version: '2.11.0'
+  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.14.0'
 
   compileOnly 'org.projectlombok:lombok:1.18.20'
   annotationProcessor "org.projectlombok:lombok:1.18.18"
@@ -274,9 +309,10 @@ dependencies {
   e2eCompile 'org.projectlombok:lombok:1.18.18'
   e2eAnnotationProcessor "org.projectlombok:lombok:1.18.18"
 
-  testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit-fluent', version: '2.25.0'
-  testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.25.0'
+  testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit-fluent', version: '2.27.0'
+  testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.27.0'
   testCompile group: 'io.rest-assured', name: 'rest-assured'
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 
   testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
